--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -2,17 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>Title</title>
+    <title>订单列表</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-theme.min.css}">
     <script type="text/javascript" th:src="@{/js/jquery-3.4.1.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 </head>
 <body>
-<!--<h1 th:text="${orderDTOPage.totalPages}"></h1>-->
-<!--<div th:each="orderDTO :${orderDTOPage.content}">-->
-<!--    <p th:text="${orderDTO.orderId}"></p>-->
-<!--</div>-->
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span12">
@@ -37,8 +33,8 @@
                     <td th:text="${orderDTO.buyerPhone}"></td>
                     <td th:text="${orderDTO.buyerAddress}"></td>
                     <td th:text="${orderDTO.orderAmount}"></td>
-                    <td th:text="${orderDTO.orderStatus}"></td>
-                    <td th:text="${orderDTO.payStatus}"></td>
+                    <td th:text="${orderDTO.getOrderStatusEnum().message}"></td>
+                    <td th:text="${orderDTO.getPayStatusEnum().message}"></td>
                     <td th:text="${orderDTO.createTime}"></td>
                     <td>详情</td>
                     <td>取消</td>
@@ -46,6 +42,22 @@
                 </tbody>
             </table>
         </div>
+        <nav aria-label="Page navigation">
+            <ul class="pagination  pull-right">
+                <li>
+                    <a href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li th:each="index:${#numbers.sequence(1,orderDTOPage.getTotalPages())}"><a href="#"
+                                                                                            th:text="${index}"></a></li>
+                <li>
+                    <a href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </div>
 </body>
