--- a/src/main/resources/templates/order/detail.html
+++ b/src/main/resources/templates/order/detail.html
@@ -5,59 +5,66 @@
     <title>订单详情</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-theme.min.css}">
-    <script type="text/javascript" th:src="@{/js/jquery-3.4.1.min.js}"></script>
-    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row-fluid">
-        <div class="span12">
-            <table class="table table-bordered">
-                <thead>
-                <tr>
-                    <th>订单id</th>
-                    <th>订单总金额</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td th:text="${orderDTO.orderId}"></td>
-                    <td th:text="${orderDTO.orderAmount}"></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <!--        订单详情数据-->
-        <div class="span12">
-            <table class="table table-bordered">
-                <thead>
-                <tr>
-                    <th>商品id</th>
-                    <th>商品名称</th>
-                    <th>价格</th>
-                    <th>数量</th>
-                    <th>总额</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="orderDetail :${orderDTO.orderDetailList}">
-                    <td th:text="${orderDetail.productId}"></td>
-                    <td th:text="${orderDetail.productName}"></td>
-                    <td th:text="${orderDetail.productPrice}"></td>
-                    <td th:text="${orderDetail.productQuantity}"></td>
-                    <td th:text="${orderDetail.productQuantity * orderDetail.productPrice}"></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <!--        操作-->
-        <div class="span12" th:if="${orderDTO.getOrderStatusEnum().message}=='新订单'">
-            <a th:href="@{'/seller/order/finish?orderId=' +${orderDTO.orderId}}" type="button"
-               class="btn btn-primary">完结订单</a>
-            <a th:href="@{'/seller/order/cancel?orderId=' +${orderDTO.orderId}}" type="button"
-               class="btn btn-danger">取消订单</a>
-        </div>
+<div id="wrapper" class="toggled">
+    <!--    sidebar-->
+    <div th:replace="@{~/common/nav} :: sidebar"></div>
 
+    <!--content-->
+    <div id="page-content-wrapper">
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="col-md-12 column">
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>订单id</th>
+                            <th>订单总金额</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td th:text="${orderDTO.orderId}"></td>
+                            <td th:text="${orderDTO.orderAmount}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!--        订单详情数据-->
+                <div class="span12">
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>商品id</th>
+                            <th>商品名称</th>
+                            <th>价格</th>
+                            <th>数量</th>
+                            <th>总额</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="orderDetail :${orderDTO.orderDetailList}">
+                            <td th:text="${orderDetail.productId}"></td>
+                            <td th:text="${orderDetail.productName}"></td>
+                            <td th:text="${orderDetail.productPrice}"></td>
+                            <td th:text="${orderDetail.productQuantity}"></td>
+                            <td th:text="${orderDetail.productQuantity * orderDetail.productPrice}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!--        操作-->
+                <div class="span12" th:if="${orderDTO.getOrderStatusEnum().message}=='新订单'">
+                    <a th:href="@{'/seller/order/finish?orderId=' +${orderDTO.orderId}}" type="button"
+                       class="btn btn-primary">完结订单</a>
+                    <a th:href="@{'/seller/order/cancel?orderId=' +${orderDTO.orderId}}" type="button"
+                       class="btn btn-danger">取消订单</a>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
 </body>
