--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -47,16 +47,16 @@
                         </div>
                         <div class="form-group">
                             <label>类目</label>
-                            <select name="cateType" class="form-control">
+                            <select name="categoryType" class="form-control">
                                 <option th:each="category :${categoryList}"
                                         th:value="${category.categoryType}"
                                         th:text="${category.categoryName}"
-                                        th:selected="${productInfo.categoryType==category.categoryType}">
+                                        th:selected="${not #strings.isEmpty(productInfo.categoryType) && productInfo.categoryType==category.categoryType}">
 
                                 </option>
                             </select>
                         </div>
-                        <input type="text" hidden th:value="${productInfo.productId}">
+                        <input name="productId" type="text" hidden th:value="${productInfo.productId}">
                         <button type="submit" class="btn btn-default">提交</button>
                     </form>
                 </div>
