--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -51,12 +51,12 @@
                                 <option th:each="category :${categoryList}"
                                         th:value="${category.categoryType}"
                                         th:text="${category.categoryName}"
-                                        th:selected="${not #strings.isEmpty(productInfo.categoryType) && productInfo.categoryType==category.categoryType}">
+                                        th:selected="${not #strings.isEmpty(productInfo?.categoryType)&&productInfo.categoryType==category.categoryType}">
 
                                 </option>
                             </select>
                         </div>
-                        <input name="productId" type="text" hidden th:value="${productInfo.productId}">
+                        <input name="productId" type="text" hidden th:value="${productInfo?.productId}">
                         <button type="submit" class="btn btn-default">提交</button>
                     </form>
                 </div>
