--- a/src/main/resources/templates/common/success.html
+++ b/src/main/resources/templates/common/success.html
@@ -16,7 +16,8 @@
                 <button type="button" class="close" data-dismiss="alert">×</button>
                 <h4>
                     成功!
-                </h4> <strong th:text="${msg} ? ''"></strong><a th:href="${url}" class="alert-link">3s后自动跳转</a>
+                </h4> <strong th:text="${#strings.isEmpty(msg)} ? '' :${msg}"></strong><a th:href="${url}"
+                                                                                          class="alert-link">3s后自动跳转</a>
             </div>
         </div>
     </div>
