--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-theme.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+    <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 <body>
 <div id="wrapper" class="toggled">
@@ -72,5 +74,64 @@
         </div>
     </div>
 </div>
+
+<!--弹窗-->
+<div class="modal fade" id="myModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title" id="myModalLabel">
+                    提醒
+                </h4>
+            </div>
+            <div class="modal-body">
+                你有新的订单
+            </div>
+            <div class="modal-footer">
+                <button onclick="javascript:$('#notice')[0].pause();" type="button" class="btn btn-default"
+                        data-dismiss="modal">关闭
+                </button>
+                <button onclick="location.reload()" type="button" class="btn btn-primary">查看新的订单</button>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+<!--播放音乐-->
+<audio id="notice" loop="loop">
+    <source th:src="@{/mp3/song.mp3}" type="audio/mpeg">
+</audio>
 </body>
+<script>
+    var websocket = null;
+    if ('WebSocket' in window) {
+        websocket = new WebSocket('ws://localhost:8080/order/webSocket');
+    } else {
+        alert('该浏览器不支持websocket');
+    }
+
+    websocket.onopen = function (event) {
+        console.log('建立连接');
+    };
+
+    websocket.onclose = function (event) {
+        console.log('连接关闭')
+    };
+
+    websocket.onmessage = function (event) {
+        console.log('收到消息' + event.data);
+        //弹窗提醒
+        $('#myModal').modal('show');
+
+        $('#notice')[0].play();
+    };
+    websocket.onerror = function (event) {
+        console.log('通信发生错误')
+    };
+    websocket.onbeforeunload = function (event) {
+        websocket.close();
+    };
+</script>
 </html>
